<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <DUT Name="T_CCC_INFO" Id="{55bbdeea-dcfd-4fdd-ab46-d97d5836a795}">
    <Declaration><![CDATA[TYPE T_CCC_INFO :
STRUCT
(*
	Driver Information

	Change LOG:
	1.0	12/02/2014	- Ported from TC2.
	1.1	13/02/2014	- Addition of input parameters for Model and readout period.
	1.2	20/02/2014	- E_CCC_STATUS.ERROR := 1, to match IODev ICD.
					- Disabled OPC UA for comm instance of FB_RS_COMM.
					- Fixed bug in INIT (wrong pointer used)
					- Bytes swapped for Temperatures and Flows.
					- On error, all values set to 9999. Alarm activated.
	1.3 07/11/2014	- Newest version always for References.
					- Remove Tc2_OpcUa library from References.
					- Renamed library to CCC.library (was CCC_TC3.library)
					- Created lib directory.
	1.4 10/02/2016	- On reboot, the device is in NOT INIT (no error!)
					- On INIT start, error is cleared.
	2.0 2016-08-10	- OPC UA notation with TMC Files
	2.1 2017-02-03	- sCmdSuffix and sReplySuffix passed to comm instance.

*)
	sDate:			STRING(16)	:= '2017-02-03';
	sDescription:	STRING(32) 	:= 'Cabinet Cooling Controller';
	sName:			STRING(16)	:= 'FB_CCC';
	sPlatform:		STRING(16)	:= 'CoDeSys';
	sSynopsis:		STRING(48)	:= 'Cabinet Cooling Controller for models 1HE & 4HE';
	nVersionMajor:	DINT		:= 2;
	nVersionMinor:	DINT		:= 1;

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>